Fixes NDLANO/Issues#3069